@startuml
@startuml
'https://plantuml.com/class-diagram'
abstract class Vehiculo{
    # posicion : Posicion
    +{abstract} BaseEfectoDecorador aceptar(ElementoMapa elemento)
    + mover(Movimiento movimiento)
    + estaEnPosicion(Posicion posicionAComparar)
    + copiarPosicionA(Vehiculo vehiculo)
}
class CuatroPorCuatro{
    - pozosAtravesados : int
    +aceptar(ElementoMapa elemento)
    +pisarPozo()
    +pisoMasDeTresPozos()
}

class Auto{
 + aceptar(ElementoMapa elemento)
}
class Posicion{
    - fila : int
    - columna : int
    +actualizarPosicion(String direccion)
    +calcularPosicion(String direccion)
    +fueraDeRango(int maxCol, int maxFil)
}
class Jugador{
    - cantMovimientos : int
    + estaEnPosicion(Posicion unaPosicion)
    + cantidadDeMovimientosEs(int unEntero)
    + mover(Movimiento movimiento)
    - alcanzoMeta : Bool
}

class Juego{
    + mover(Movimiento movimiento)
    + estaFinalizado()
    + obtenerNombre()
    + obtenerPuntaje()
}
Juego --> Vehiculo

class Moto extends Vehiculo{
    +aceptar(ElementoMapa elemento)
}
class Auto extends Vehiculo{
    +aceptar(ElementoMapa elemento)
}
class Ranking{
    rank : Map
    jugadores : Ma
    registrarJugador(String : nombre, int : puntaje)
    obtenerRanking()
    obtenerPuntajeJugador(String : nombre)
}

Juego ..> Ranking : Utiliza
Juego --> Jugador

CuatroPorCuatro --|> Vehiculo

Vehiculo *--Posicion

Jugador *--"1" Vehiculo


@enduml